fix: adjust table head style, remove whitespace nowrap and add text align center

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -9,7 +9,7 @@
   > thead > tr > th {
     vertical-align: middle;
     background-color: $table-head-bg;
-    white-space: nowrap;
+    text-align: center;
   }
 
   > tbody > tr {
